Clean-up (iterators to for..each, autoboxing, etc)